environment/k8s/devsu-demo-devops-nodejs/base/deployment.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: devsu-demo-devops-nodejs
  labels:
    app: devsu-demo-devops-nodejs
spec:
  replicas: 3
  selector:
    matchLabels:
      app: devsu-demo-devops-nodejs
  template:
    metadata:
      labels:
        app: devsu-demo-devops-nodejs
    spec:
      containers:
        - name: devsu-demo-devops-nodejs
          image: image-devsu-demo-devops-nodejs
          imagePullPolicy: Always
          ports:
            - containerPort: 8000
              protocol: TCP
          resources:
            limits:
              memory: "512Mi"
              cpu: "500m"
            requests:
              memory: "128Mi"
              cpu: "250m"
