environment/k8s/devsu-demo-devops-nodejs/base/ingress.yml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: devsu-demo-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: placeholder.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: devsu-demo-service
                port:
                  number: 8000
